fixed PigAlgBuilderTest